syntax = "proto3";

option go_package = "./users";

package users;

service UsersGreet{
    rpc GetUsers(GetUsersRequest) returns (GetUsersResponse) {}
}

message GetUsersRequest {
    string userName = 1;
}

message GetUsersResponse {
    repeated Users data = 1;
}

message Users {
    int32 id = 1;
    string name = 2;
    string email = 3;
}